playbooks/roles/k3s_setup/files/my-charts/grafana/homelab.grafana.yaml
# grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: default
  annotations:
    cert-manager.io/issuer: "selfsigned-issuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - homelab.grafana
    secretName: grafana-tls
  rules:
  - host: homelab.grafana
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
